# nouveau

./: .gitignore  MANIFEST.in  Packaging.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
morris/: __init__.py
nouveau/: __init__.py  _dataset.py  collections.py  driscoll.csv  morris.csv  mucha.csv  transforms.py
tests/: test_api.py
